--- a/index.html
+++ b/index.html
@@ -1,1 +1,224 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Kiwi Industries</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <!-- opengraph stuff -->
+
+	<meta name="author" content="Kiwi Industries">
+    <meta name="description" content="Providing services to assist businesses with their digital transformation.">
+    <meta name="keywords" content="IT, computers, programming, coding, websites, apps, digital">
+	<meta name="robots" content="all">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://kiwi.industries">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Kiwi Industries">
+    <meta property="og:title" content="Kiwi Industries">
+    <meta property="og:description" content="Providing services to assist businesses with their digital transformation.">
+    <meta property="og:image" content="https://kiwi.industries/assets/img/favicons/favicon-310.png">
+    <meta name="theme-color" content="#606c38" />
+
+    <!-- Twitter Meta Tags -->
+    <meta property="twitter:domain" content="kiwi.industries">
+    <meta property="twitter:url" content="https://kiwi.industries">
+    <meta name="twitter:title" content="Kiwi Industries">
+    <meta name="twitter:description" content="Providing services to assist businesses with their digital transformation.">
+    <meta name="twitter:image" content="https://kiwi.industries/assets/img/favicons/favicon-310.png">
+
+    <!-- faviconit icon stuff -->
+    <link rel="shortcut icon" href="assets/img/favicons/favicon.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="assets/img/favicons/favicon.ico">
+	<link rel="icon" type="image/png" sizes="196x196" href="assets/img/favicons/favicon-192.png">
+	<link rel="icon" type="image/png" sizes="160x160" href="assets/img/favicons/favicon-160.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicons/favicon-96.png">
+	<link rel="icon" type="image/png" sizes="64x64" href="assets/img/favicons/favicon-64.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16.png">
+	<link rel="apple-touch-icon" href="assets/img/favicons/favicon-57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="assets/img/favicons/favicon-114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicons/favicon-72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicons/favicon-144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicons/favicon-60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicons/favicon-120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicons/favicon-76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicons/favicon-152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/favicon-180.png">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
+	<meta name="msapplication-TileImage" content="assets/img/favicons/favicon-144.png">
+	<meta name="msapplication-config" content="assets/img/favicons/browserconfig.xml">
+
+    <!-- CSS & fonts -->
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Kaushan%20Script.css">
+    <link rel="stylesheet" href="assets/css/Montserrat.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=G-YSGWREDGSE"></script>
+    <script defer>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-YSGWREDGSE');
+    </script>
+</head>
+
+<body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="54">
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav">
+            <a class="navbar-brand" href="#page-top">
+                <img src="assets/img/logo.svg" width="175px">
+            </a>
+            <button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <img src="assets/img/bars.svg" width="20px" height="20px">
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto text-uppercase">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#services">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#team">Team</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+    </nav>
+    <header class="masthead">
+        <div class="container">
+            <div class="intro-text">
+                <div class="intro-lead-in">
+                    <span class="leadText">We can help build the solution<br>for <strong>YOUR</strong>&nbsp;business.</span>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="text-uppercase section-heading">Services</h2>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <img src="assets/img/pencil-circle.svg" width="128px" height="128px" class="mb-2">
+                    <h4 class="section-heading">Digital Transition</h4>
+                    <p class="text-muted">We offer extensive, specialist services dedicated to helping transition your business to use digital service workflows in the modern age. <strong>Technology has helped 76% of UK small businesses boost their business operations in the past year.</strong><a href="https://edtechnology.co.uk/business/tech-has-improved-efficiency-3-4-uk-businesses/"><sup><strong>*</strong></sup></a></p>
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/img/laptop-circle.svg" height="128px" width="128px" class="mb-2">
+                    <h4 class="section-heading">Responsive Design</h4>
+                    <p class="text-muted">We ensure that your application looks good &amp; feels great to use on all devices - phone, tablet, laptop &amp; desktop. No having to zoom in to click a button on your phone!</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/img/lock-circle.svg" height="128px" width="128px" class="mb-2">
+                    <h4 class="section-heading">Web Security</h4>
+                    <p class="text-muted">
+                        <strong>Up to 88% of UK companies have suffered data breaches in the past 12 months.</strong>
+                        <a href="https://edtechnology.co.uk/business/tech-has-improved-efficiency-3-4-uk-businesses/">
+                            <sup>
+                                <strong>*</strong>
+                            </sup>
+                        </a>
+                        <br>
+                        Security is at the forefront of everything we do - we perform comprehensive testing &amp; audits to ensure that your website application does not fall victim to a breach.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bg-light" id="team">
+        <div class="container">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="rounded-circle mx-auto" src="assets/img/team/1.png">
+                        <h4>Keanu Czirjak</h4>
+                        <p class="text-muted">Director</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="rounded-circle mx-auto" src="assets/img/team/2.png">
+                        <h4>Will Sandford</h4>
+                        <p class="text-muted">Developer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact" style="background-image:url('assets/img/map-image.png');">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="text-uppercase section-heading">Contact Us</h2>
+                    <h3 class="text-muted section-subheading">Get in touch with us - start turbocharging your business today!</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form id="contactForm" name="contactForm" novalidate="novalidate" action="mailto:hello@kiwi.industries" method="GET">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group mb-3"><input class="form-control" type="text" id="name" placeholder="Your Name *" required=""><small class="form-text text-danger flex-grow-1 help-block lead"></small></div>
+                                <div class="form-group mb-3"><input class="form-control" type="text" id="subject" placeholder="Subject *" required="" name="subject"><small class="form-text text-danger flex-grow-1 help-block lead"></small></div>
+                                <div class="form-group mb-3"><input class="form-control" type="email" id="email" placeholder="Your Email *" required=""><small class="form-text text-danger help-block lead"></small></div>
+                                <div class="form-group mb-3"><input class="form-control" type="tel" placeholder="Your Phone *" required=""><small class="form-text text-danger help-block lead"></small></div>
+                            </div>
+                            <div class="col-md-6 mx-auto">
+                                <div class="form-group mb-3 mx-auto"><textarea class="form-control" id="message" placeholder="Your Message *" required="" name="body" style="height: 300px;"></textarea><small class="form-text text-danger help-block lead"></small></div>
+                            </div>
+                            <div class="w-100"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div><button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4"><span class="copyright">Copyright&nbsp;© Kiwi Industries 2022</span></div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li class="list-inline-item">
+                            <a href="https://twitter.com/kiwi_industries">
+                                <img src="assets/img/twitter.svg" width="20px" height="20px">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.linkedin.com/company/kiwiindustries">
+                                <img src="assets/img/linkedin.svg" width="20px" height="20px">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://github.com/kiwiindustries">
+                                <img src="assets/img/github.svg" width="20px" height="20px">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+                        <li class="list-inline-item"><a href="#">Terms of Use</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/agency.js"></script>
+</body>
+
+</html>
