Actually fixes logo display issues?

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="54">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav">
             <a class="navbar-brand" href="#page-top">
-                <img src="assets/img/logo.svg">
+                <img src="assets/img/logo.svg" width="175px">
             </a>
             <button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <img src="assets/img/bars.svg" width="20px" height="20px">
